Release 0.3.3 (pending)
==========================

- Support for optional gain range step in type conversions

Release 0.3.2 (2017-01-22)
==========================

- Added tx/rx_subdev device argument for uhd device
- Added corrections hooks for soapy devices in uhd
- Symlinks to workaround uhd 3.10 multi-arch bug
- Minor corrections for license and copyright text
- Update debian files for SoapySDR module ABI format

Release 0.3.1 (2016-08-13)
==========================

- support setHardwareTime("CMD"), deprecated setCommandTime()
- support changes to property tree API (backwards compatible)
- support property tree API changes for uhd v3.10.0

Release 0.3.0 (2015-11-20)
==========================

- SoapyUHDDevice - implement getSensorInfo() for SoapySDR v0.4
- SoapyUHDDevice - implement getStreamArgsInfo() for SoapySDR v0.4
- SoapyUHDDevice - implement getNativeStreamFormat() for SoapySDR v0.4
- SoapyUHDDevice - implement getStreamFormats() for SoapySDR v0.4
- UHDSoapyDevice - use getSensorInfo() for sensors

Release 0.2.0 (2015-10-10)
==========================

- Hooks for 'has' DC offset mode, DC offset, and IQ balance
- Switched to using per-channel and global sensors API
- Added GPIO access support for Soapy UHD and vice-versa

Release 0.1.2 (2015-09-13)
==========================

- Fix metaRangeToNumericList for single element entries

Release 0.1.1 (2015-08-15)
==========================

- Modifications for ubuntu 12.04 w/ cmake 2.8.7

Release 0.1.0 (2015-06-15)
==========================

- Initial release of Soapy UHD support module